Final edit of seriousactivereading, ready for review.

--- a/blogs/seriousactivereading.html
+++ b/blogs/seriousactivereading.html
@@ -20,7 +20,7 @@
 
             <div>
                 <h1>Seriously Active Reading</h1>
-                <p><i></i></p>
+                <p><i>20th December 2020</i></p>
                 <h3>Introduction</h3>
                 <p>
                     What is this article all about and why should you care? Active reading (in contrast with
