Added proper titles, descriptions, metadata, and comments to all pages.

--- a/about.html
+++ b/about.html
@@ -3,8 +3,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Harry's Projects</title>
-        <meta name="description" content="">
+        <title>About</title>
+        <meta name="description" content="About Harry's Projects.">
+        <meta name="author" content="Harry Turner">
+        <meta name="keywords" content="harrys projects, about">
         <link rel="icon" type="image/ico" href="images/favicon.ico">
         <link href="styles/styles.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
