--- a/blogs/mentorship.html
+++ b/blogs/mentorship.html
@@ -3,8 +3,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Harry's Projects</title>
-        <meta name="description" content="">
+        <title>Mentorship Scam</title>
+        <meta name="description" content="The story and lesson of how I almost fell into a pyramid scheme.">
+        <meta name="author" content="Harry Turner">
+        <meta name="keywords" content="pyramid scheme, amway, mentorship, scam, business of the 21st century">
+
         <link rel="icon" type="image/ico" href="../images/favicon.ico">
         <link href="../styles/styles.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -440,7 +443,23 @@
                     The only way a pyramid scheme can survive, is by roping in more unaware participants, therefore no matter how they may
                     try and dress it up, it should always be possible to spot the fundamental warning signs beneath their lies.
                 </p>
-                
+                <br />
+                <div id="disqus_thread"></div>
+                <script>
+                    var disqus_config = function () {
+                    this.page.url = "https://www.harrysprojects.com/blogs/mentorship.html";
+                    this.page.identifier = "mentorship";
+                    };
+
+                    (function() { // DON'T EDIT BELOW THIS LINE
+                    var d = document, s = d.createElement('script');
+                    s.src = 'https://harrysprojects-com.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                    })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
                 <br />
                 <br />
             </div>
