--- a/blogs/seriousactivereading.html
+++ b/blogs/seriousactivereading.html
@@ -4,7 +4,9 @@
     <head>
         <meta charset="utf-8">
         <title>Seriously Active Reading</title>
-        <meta name="description" content="">
+        <meta name="description" content="A strategy and example for active reading based on mental models, principles, and tools.">
+        <meta name="author" content="Harry Turner">
+        <meta name="keywords" content="active reading, mental models, principles, tools, problem solving, reading system, reading strategy">
         <link rel="icon" type="image/ico" href="../images/favicon.ico">
         <link href="../styles/styles.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
