--- a/projects/carcontrol.html
+++ b/projects/carcontrol.html
@@ -3,8 +3,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Harry's Projects</title>
-        <meta name="description" content="">
+        <title>Neural Network Car Control</title>
+        <meta name="description" content="Example of controlling a small 2D car with neural networks trained with genetic algorithms.">
+        <meta name="author" content="Harry Turner">
+        <meta name="keywords" content="neural network, genetic algorithms, randomise optimisation, evolutionary algorithms">
         <link rel="icon" type="image/ico" href="../images/favicon.ico">
         <link href="../styles/styles.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -256,6 +258,23 @@
                     is able to give such incredible performance. Within the constraints of the car physics, it looks like
                     the car’s performance is pretty near optimum.
                 </p>
+                <br />
+                <div id="disqus_thread"></div>
+                <script>
+                    var disqus_config = function () {
+                    this.page.url = "https://www.harrysprojects.com/blogs/carcontrol.html";
+                    this.page.identifier = "carcontrol";
+                    };
+
+                    (function() { // DON'T EDIT BELOW THIS LINE
+                    var d = document, s = d.createElement('script');
+                    s.src = 'https://harrysprojects-com.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                    })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
                 
                 <br />
                 <br />
