--- a/projects/networklibrary.html
+++ b/projects/networklibrary.html
@@ -3,8 +3,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Harry's Projects</title>
-        <meta name="description" content="">
+        <title>Building a Neural Network Library</title>
+        <meta name="description" content="Tutorial of building a neural network library from scratch in Numpy.">
+        <meta name="author" content="Harry Turner">
+        <meta name="keywords" content="machine learning, neural network, library, numpy, mnist, bokeh, cost function, back propagation, activation function, regularisation, weight initialisation, documentation, parameter search, ">
         <link rel="icon" type="image/ico" href="../images/favicon.ico">
         <link href="../styles/styles.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -452,6 +454,23 @@
                     This is an exercise that I'd recommend someone do if they really want to understand the nitty gritty
                     details of how neural networks really work.
                 </p>
+                <br />
+                <div id="disqus_thread"></div>
+                <script>
+                    var disqus_config = function () {
+                    this.page.url = "https://www.harrysprojects.com/blogs/networklibrary.html";
+                    this.page.identifier = "networklibrary";
+                    };
+
+                    (function() { // DON'T EDIT BELOW THIS LINE
+                    var d = document, s = d.createElement('script');
+                    s.src = 'https://harrysprojects-com.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                    })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
                 
                 <br />
                 <br />
