--- a/machine_learning.html
+++ b/machine_learning.html
@@ -3,8 +3,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Harry's Projects</title>
-        <meta name="description" content="">
+        <title>Machine Learning</title>
+        <meta name="description" content="Machine Learning articles.">
+        <meta name="author" content="Harry Turner">
+        <meta name="keywords" content="machine learning, deep learning, object detection">
         <link rel="icon" type="image/ico" href="images/favicon.ico">
         <link href="styles/styles.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
