--- a/projects/artificial.html
+++ b/projects/artificial.html
@@ -3,8 +3,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Harry's Projects</title>
-        <meta name="description" content="">
+        <title>Generating Artificial Training Data</title>
+        <meta name="description" content="I write an algorithm to generate artificial training images, and then train an image classifier to classify real images with an accuracy of 98%.">
+        <meta name="author" content="Harry Turner">
+        <meta name="keywords" content="artificial, deep learning, machine learning, data">
         <link rel="icon" type="image/ico" href="../images/favicon.ico">
         <link href="../styles/styles.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -284,6 +286,23 @@
                     <img src="../images/projects/artificial/gad_17.png"/>
                     <p><i>Confusion matrix for a classifier trained on the best artificial images.</i></p>
                 </div>
+                <br />
+                <div id="disqus_thread"></div>
+                <script>
+                    var disqus_config = function () {
+                    this.page.url = "https://www.harrysprojects.com/blogs/artificial.html";
+                    this.page.identifier = "artificial";
+                    };
+
+                    (function() { // DON'T EDIT BELOW THIS LINE
+                    var d = document, s = d.createElement('script');
+                    s.src = 'https://harrysprojects-com.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                    })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
                 <br />
                 <br />
             </div>
