Added keywords to home page.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Harry's Projects</title>
-        <meta name="description" content="">
+        <title>Harrys Projects</title>
+        <meta name="description" content="Harry's Personal Website.">
+        <meta name="author" content="Harry Turner">
+        <meta name="keywords" content="harry, projects, harrys projects, harry's projects, website, blog, henry">
+
         <link rel="icon" type="image/ico" href="images/favicon.ico">
         <link href="styles/styles.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
