Published how to read.

--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,17 @@
                 <h1>Thoughts and Ideas.</h1>
                 <div>
                     <br />
+                    <h5><a href="blogs/howtoread.html">How to Read: A Strategy for Identifying and Remembering the Important Stuff</a></h5>
+                    <p><i>20th December 2020</i></p>
+                    <p>
+                        In this post I outline my strategy for active reading, when I really want to understand, absorb,
+                        and remember the material. I look for and extract mental models, principles, and tools, and make
+                        a concerted effort to internalise them using spaced repetition. In this post I explain each of these
+                        pieces, and tie it all together with a worked example.
+                    </p>
+                </div>
+                <div>
+                    <br />
                     <h5><a href="blogs/sowhat.html">The 'So What'</a></h5>
                     <p><i>15th September 2020</i></p>
                     <p>
