--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,15 @@
         <link rel=“canonical” href=“https://www.harrysprojects.com/blog.html” />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="js/Navbar.js" type="text/javascript" defer></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180754451-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-180754451-1');
+        </script>
     </head>
     <body>
         <div class="page-container">
