Added deep multi box.

--- a/machine_learning.html
+++ b/machine_learning.html
@@ -47,18 +47,8 @@
                     by someone with slightly less background in object detection than the papers assume.
                 </p>
                 <p>
-                    I'm still writing this series right now (December 2020) and the majority of these posts are
-                    still not ready for publishing, more posts will be added as they get written.
+                    I'm still writing this series right now (January 2021), more posts will be added as they get written.
                 </p>
-                <ul>
-                    <h5>What Is Object Detection: A Birds Eye View of the Field</h5>
-                    <ul>
-                        <li><p style="color: #cccccc">Problem Formation</p></li>
-                        <li><p style="color: #cccccc">Datasets and Benchmarks</p></li>
-                        <li><p style="color: #cccccc">Cheat Sheet</p></li>
-                    </ul>
-                </ul>
-                <br />
                 <ul>
                     <h5>Two Stage Detectors: R-CNN to Mesh-RCNN</h5>
                     <ul>
@@ -67,7 +57,13 @@
                         <li><p><a href="articles/fastrcnn.html">Fast R-CNN</a></p></li>
                         <li><p><a href="articles/fasterrcnn.html">Faster R-CNN</a></p></li>
                         <li><p><a href="articles/maskrcnn.html">Mask R-CNN</a></p></li>
-                        <li><p style="color: #cccccc">Mesh R-CNN</p></li>
+                    </ul>
+                </ul>
+                </br>
+                <ul>
+                    <h5>One Stage Detectors: YOLO to RetinaNet</h5>
+                    <ul>
+                        <li><p><a href="articles/multibox.html">Deep Multi Box</a></p></li>
                     </ul>
                 </ul>
                 <br />
