Added crucial conversations.

--- a/blogs/howtoread.html
+++ b/blogs/howtoread.html
@@ -34,7 +34,7 @@
                 <p><i>20th December 2020</i></p>
                 <h3>Introduction</h3>
                 <p>
-                    What is this article all about and why should you care? Active reading (in contrast with
+                    What is this article about and why should you care? Active reading (in contrast with
                     passive reading) is the process of trying to actively remember what we read by engaging with
                     the material as we read it. More often than not that means taking notes, pausing regularly to reflect and
                     connect the ideas with our other experiences, and following up with the information afterward
