--- a/books.html
+++ b/books.html
@@ -38,6 +38,17 @@
                 <h3>2020</h3>
                 <div>
                     <br />
+                    <h5>Crucial Conversations</h5>
+                    <p><i>Patterson, Grenny, McMillan, Switzler</i></p>
+                    <p>
+                        Both my friend and I read this because we needed to have a tough conversation about the future
+                        of a project we wanted to do together. This book reads like a business training course (which
+                        it is), and I'm not usually a fan of such books, but I did find this one useful. There were
+                        several principles, mental models, and tools for me to take away and learn.
+                    </p>
+                </div>
+                <div>
+                    <br />
                     <h5>The Black Swan</h5>
                     <p><i>Nassim Nicholas Taleb</i></p>
                     <p>
