Added burning out post.

--- a/blog.html
+++ b/blog.html
@@ -33,6 +33,14 @@
                 <h1>Thoughts and Ideas.</h1>
                 <div>
                     <br />
+                    <h5><a href="blogs/burningout.html">On Not Burning Out</a></h5>
+                    <p><i>20th January 2021</i></p>
+                    <p>
+                        A personal reminder that balance in life is important.
+                    </p>
+                </div>
+                <div>
+                    <br />
                     <h5><a href="blogs/howtoread.html">How to Read: A Strategy for Identifying and Remembering the Important Stuff</a></h5>
                     <p><i>20th December 2020</i></p>
                     <p>
