Added time estimates to blog posts.

--- a/blog.html
+++ b/blog.html
@@ -38,6 +38,7 @@
                     <p>
                         A personal reminder that balance in life is important.
                     </p>
+                    <p><i>4 minute read.</i></p>
                 </div>
                 <div>
                     <br />
@@ -49,6 +50,7 @@
                         a concerted effort to internalise them using spaced repetition. In this post I explain each of these
                         pieces, and tie it all together with a worked example.
                     </p>
+                    <p><i>20 minute read.</i></p>
                 </div>
                 <div>
                     <br />
@@ -58,6 +60,7 @@
                         A technique for sourcing, triaging, reading, and storing articles when you want to stay up
                         to date in your field.
                     </p>
+                    <p><i>7 minute read.</i></p>
                 </div>
                 <div>
                     <br />
@@ -68,6 +71,7 @@
                         I didn't think I was the sort of person to fall for that sort of thing, but I almost did. This post
                         briefly explains what happened, why it was effectivem and how to not fall for the same trick.
                     </p>
+                    <p><i>20 minute read.</i></p>
                 </div>
                 <br />
                 <br />
