Tweak to burning out.

--- a/blogs/burningout.html
+++ b/blogs/burningout.html
@@ -73,7 +73,7 @@
                 </div>
                 <p>
                     By slowing down and reflecting on my experience as I go, I've noticed that I am better at what I do. I have
-                    time to just sit and consider what I'm trying to accomplish, I can read more around an idea, and
+                    time to just sit and consider what I'm trying to accomplish, I can read more around the topic, and
                     think about it more deeply. Because I'm thinking more deeply, I have
                     noticed that I have more spontaneous ideas, and those ideas are usually more creative and insightful.
                     Ironically, this makes me do better and faster work than I would achieve by simply working hard or fast.
