Tweak burning out.

--- a/blogs/burningout.html
+++ b/blogs/burningout.html
@@ -80,7 +80,7 @@
                 </p>
                 <p>
                     I've become a nicer person. I have more patience for people and more compassion. I remember that
-                    towards the end of last year, for something as simple as going to the supermarket, I'd get internally
+                    towards the end of last year, when doing something as simple as going to the supermarket, I would get internally
                     mad at people for being slow or blocking the aisle. I'd rationalise the response by telling myself that
                     I worked really hard and therefore didn't deserve to have these idiots stress me out more than I already
                     was. Of course, the world doesn't work like that. Now I just smile, it doesn't bother me. I've noticed
