Added link to SSD in ML page.

--- a/machine_learning.html
+++ b/machine_learning.html
@@ -33,8 +33,8 @@
                 <h1>Machine Learning.</h1>
                 <h3>Object Detection with Deep Learning</h3>
                 <p>
-                    This is an introductory tutorial series to doing object detection with Deep Learning,
-                    specifically, I cover each of the seminal papers in object detection from 2014 when they
+                    This is an introductory tutorial series to doing object detection with Deep Learning.
+                    I cover each of the seminal papers in object detection from 2014 when they
                     first appeared to the state of the art architectures as of 2020. When I first started learning
                     this field, it took me a while to bridge the gap from basic convolutional classifiers to
                     object detectors, in this tutorial series I hope to accelerate that process for you by
@@ -65,6 +65,7 @@
                     <ul>
                         <li><p><a href="articles/multibox.html">Deep Multi Box</a></p></li>
                         <li><p><a href="articles/yolov1.html">YOLO v1</a></p></li>
+                        <li><p><a href="articles/ssd.html">Single Shot Detector</a></p></li>
                     </ul>
                 </ul>
                 <br />
