--- a/books.html
+++ b/books.html
@@ -38,6 +38,18 @@
                 <h3>2021</h3>
                 <div>
                     <br />
+                    <h5>Zen and the Art of Motorcycle Maintenance</h5>
+                    <p><i>Robert Persig</i></p>
+                    <p>
+                        I read this one because it pops up again and again on lists like "100 books to read before you die"
+                        or "5 books recommended by X", so I thought I'd give it a go. It's possibly one of my favourite
+                        books now. It's a true story, woven throughout with bits on philosophy, spirituality, and values.
+                        I liked the way it was written, I read it slowly, and I felt like it changed the way I think. I
+                        love books that do that. Definitely going to read again.
+                    </p>
+                </div>
+                <div>
+                    <br />
                     <h5>Crucial Conversations</h5>
                     <p><i>Patterson, Grenny, McMillan, Switzler</i></p>
                     <p>
