Added link to ML.

--- a/machine_learning.html
+++ b/machine_learning.html
@@ -66,6 +66,7 @@
                         <li><p><a href="articles/multibox.html">Deep Multi Box</a></p></li>
                         <li><p><a href="articles/yolov1.html">YOLO v1</a></p></li>
                         <li><p><a href="articles/ssd.html">Single Shot Detector</a></p></li>
+                        <li><p><a href="articles/yolov23.html">YOLO Version 2 and 3</a></p></li>
                     </ul>
                 </ul>
                 <br />
