Added efficientnetx article.

--- a/machine_learning.html
+++ b/machine_learning.html
@@ -31,6 +31,19 @@
 
             <div>
                 <h1>Machine Learning.</h1>
+                <br />
+                <h3>Paper Reviews</h3>
+                <p>
+                    Some papers I want to try and understand particularly well, or will have reason to come
+                    back to in the future. In this case, as part of my effort of understanding and remembering them,
+                    I write an article introducing and explaining it. This section is for those articles.
+                </p>
+                <ul>
+                    <ul>
+                        <li><p><a href="articles/efficientnetx.html">Searching for Fast Model Families on Datacenter Accelerators</a></p></li>
+                    </ul>
+                </ul>
+                <br />
                 <h3>Object Detection with Deep Learning</h3>
                 <p>
                     This is an introductory tutorial series to doing object detection with Deep Learning.
@@ -47,7 +60,7 @@
                     by someone with slightly less background in object detection than the papers assume.
                 </p>
                 <p>
-                    I'm still writing this series right now (January 2021), more posts will be added as they get written.
+                    I'm still writing this series right now (February 2021), more posts will be added as they get written.
                 </p>
                 <ul>
                     <h5>Two Stage Detectors: R-CNN to Mesh-RCNN</h5>
