Added Good to Great.

--- a/books.html
+++ b/books.html
@@ -38,6 +38,19 @@
                 <h3>2021</h3>
                 <div>
                     <br />
+                    <h5>Good to Great</h5>
+                    <p><i>Jim Collins</i></p>
+                    <p>
+                        This is the first of several I plan to read to understand what a great company looks and feels
+                        like. I'll admit I was a bit suspicious of this book to begin with, as with any book that does
+                        some analysis and claims to have found the recipe for success (survivorship bias..?). But it
+                        grew on my over time and really liked it in the end. I treated the six main concepts as simply
+                        ideas not recipes. The acid test was to see if they made sense in my own life as well and most
+                        did. Will read again at some point.
+                    </p>
+                </div>
+                <div>
+                    <br />
                     <h5>Zen and the Art of Motorcycle Maintenance</h5>
                     <p><i>Robert Persig</i></p>
                     <p>
