Added culture code book.

--- a/books.html
+++ b/books.html
@@ -38,13 +38,25 @@
                 <h3>2021</h3>
                 <div>
                     <br />
+                    <h5>The Culture Code</h5>
+                    <p><i>Daniel Coyle</i></p>
+                    <p>
+                        This is the second of several books I plan to read to understand what a great company looks and feels
+                        like. This was good, and because it was full of example stories I'm starting to get a sense of what
+                        a good team feels like to work in, or how to run one. The actual takeaways from the book can be
+                        condensed into a few pages but that's okay because the value is in the stories. I'll read again
+                        but it's not high on my priority list.
+                    </p>
+                </div>
+                <div>
+                    <br />
                     <h5>Good to Great</h5>
                     <p><i>Jim Collins</i></p>
                     <p>
-                        This is the first of several I plan to read to understand what a great company looks and feels
+                        This is the first of several books I plan to read to understand what a great company looks and feels
                         like. I'll admit I was a bit suspicious of this book to begin with, as with any book that does
                         some analysis and claims to have found the recipe for success (survivorship bias..?). But it
-                        grew on my over time and really liked it in the end. I treated the six main concepts as simply
+                        grew on me over time and I really liked it by the end. I treated the six main concepts as simply
                         ideas not recipes. The acid test was to see if they made sense in my own life as well and most
                         did. Will read again at some point.
                     </p>
