Added two books and updated mentorship post.

--- a/blogs/mentorship.html
+++ b/blogs/mentorship.html
@@ -156,24 +156,19 @@
                 </p>
                 <p>
                     Basically, I was roped in
-                    by the idea of the mentorship scheme. Right now I'm very into self-development, and I'm not talking about the wishy
-                    washy self-help type stuff that has you chant <i>"I will be successful"</i> over and over every night, and hang
-                    dream boards all over your walls (I'm not judging that style of self-help, I'm just not into it), I mean instead
-                    that I read books on psychology because it's good to understand how people work, I joined toastmasters because
-                    I was crap at public speaking and wanted to get better, I'm doing a masters degree in my spare time because I want
-                    to learn more about Computer Science, etc.
+                    by the idea of the mentorship scheme. I like the idea of self-development - for example I read books on psychology
+                    because I think it's important to understand how people work, I joined toastmasters because
+                    I was crap at public speaking and wanted to get better, etc.
                 </p>
                 <p>
-                    Anyway, a sensible and natural idea is that the best way of getting better at something is to have a mentor
-                    that is already an expert at that thing so that they can guide you, point out mistakes, and make your learning generally
-                    much more efficient. This is basically what all apprenticeships are, and it works very well. Want to get better at running?
-                    Go make friends with someone who is very good at running, runs regularly, and wins races. Then find out what they do and
-                    copy it. I'm not saying this works 100% every time but it's not a bad place to start. Also, I'm not advocating that you go
-                    around selfishly sucking value out of other people in order for you to get better, I mean that you should go genuinely
-                    make friends and add value back to them so it's not all one way, and you can both grow together.
+                    A common idea in the self development space is that the best way of getting better at something is to have a mentor
+                    that is already an expert at that thing so that they can guide you, point out mistakes, and help you get better.
+                    This is basically what all apprenticeships are, and it works very well. Want to get better at running?
+                    Go make friends with someone who is very good at running, runs regularly, and wins races. Then find out
+                    what they do and copy it. I'm not saying this works 100% every time but it's not a bad place to start.
                 </p>
                 <p>
-                    Anyway, back to the point. I thought that this mentorship group would be something like that, that was how Jack and Pete described
+                    I thought that this mentorship group would be something like that, that was how Jack and Pete described
                     it, and that was why I jumped at the opportunity. The bit on the financial assets was actually secondary to me (honestly,
                     even in hindsight!) because I'm not that bothered about retiring in my early 30s. Sure it would be nice, and
                     I have days where I really can't be arsed to go to work, just like everyone else has days like that, but I generally
