--- a/books.html
+++ b/books.html
@@ -38,12 +38,42 @@
                 <h3>2021</h3>
                 <div>
                     <br />
+                    <h5>Little Bets</h5>
+                    <p><i>Peter Sims</i></p>
+                    <p>
+                        This is the fourth of several books I plan to read to understand what a great company looks and feels
+                        like. I read this because the principles in both Good to Great and Great by Choice reflect the
+                        idea of trying things out to figure out what works, then going all out once you know what you're doing.
+                        This idea gels with me a lot, I'm a huge advocate for not trying to plan everything up front, you can't,
+                        you simply don't know what's going to happen and you have to be prepared to explore and adapt. That's the
+                        empirical approach and I thought Little Bets would be all about that idea. It was to some extent, although
+                        it was more about team culture than I was expecting. There were some good ideas in there about being
+                        relentless in information gathering (something I don't do enough of), and building a culture of
+                        tinkering and playfulness.
+                    </p>
+                </div>
+                <div>
+                    <br />
+                    <h5>Great by Choice</h5>
+                    <p><i>Jim Collins</i></p>
+                    <p>
+                        This is the third of several books I plan to read to understand what a great company looks and feels
+                        like. I read this because I liked his other book, Good to Great. This is similar in that it follows
+                        the study of a set of great companies where the researchers figure out what principles those companies have in common.
+                        This book in particular targets companies that have thrived in uncertainty.
+                        I liked and agreed with the principles in this book, in fact they felt more
+                        relevant to me and the company I work for than the Good to Great principles. I like Jim Collins'
+                        style of packaging up the ideas into neat little concepts with catchy names.
+                    </p>
+                </div>
+                <div>
+                    <br />
                     <h5>The Culture Code</h5>
                     <p><i>Daniel Coyle</i></p>
                     <p>
                         This is the second of several books I plan to read to understand what a great company looks and feels
                         like. This was good, and because it was full of example stories I'm starting to get a sense of what
-                        a good team feels like to work in, or how to run one. The actual takeaways from the book can be
+                        a good team feels like to work in, or how to run one. I felt that the takeaways from the book could have been
                         condensed into a few pages but that's okay because the value is in the stories. I'll read again
                         but it's not high on my priority list.
                     </p>
