Added active learning posts.

--- a/books.html
+++ b/books.html
@@ -38,6 +38,22 @@
                 <h3>2021</h3>
                 <div>
                     <br />
+                    <h5>Small Giants</h5>
+                    <p><i>Bo Burlingham</i></p>
+                    <p>
+                        This is the fifth of several books I plan to read to understand what a great company looks and feels
+                        like. The premise is that some companies choose something else instead of going for
+                        growth - that something else is usually a better working culture, community involvement, or just being more philanthropic.
+                        The book is about a series of case studies of such companies, and investigates what they chose instead
+                        of growth, and how they did it. The author looks for and extracts patterns but I was hesitant
+                        about blindingly accepting them. In constast to the Good to Great principles which I feel are more timeless
+                        and robust, I don't believe these ones are tried and tested, I think they only happened to work for those companies
+                        at that particular point in time. Still, it was a nice book and a good reminder that building a
+                        business doesn't always have to be about growing as big as you can as quickly as possible.
+                    </p>
+                </div>
+                <div>
+                    <br />
                     <h5>Little Bets</h5>
                     <p><i>Peter Sims</i></p>
                     <p>
