--- a/machine_learning.html
+++ b/machine_learning.html
@@ -83,6 +83,15 @@
                     </ul>
                 </ul>
                 <br />
+                <h3>Active Learning</h3>
+                <ul>
+                    <ul>
+                        <li><p><a href="articles/objectal.html">Introduction to Active Learning for Object Detection at Vaarst</a></p></li>
+                        <li><p><a href="articles/uncertaintysampling.html">Uncertainty Sampling Techniques</a></p></li>
+                        <li><p><a href="articles/diversitysampling.html">Diversity Sampling Techniques</a></p></li>
+                    </ul>
+                </ul>
+                <br />
                 <br />
             </div>
 
