Updated home screen.

--- a/index.html
+++ b/index.html
@@ -44,32 +44,17 @@
                     Welcome to my website, a place where I keep a record of projects I've done, reviews of books I've read,
                     machine learning topics I've studied, and thoughts and ideas I've had.
                 </p>
-                <h3>Other Blogs you Might Like</h3>
-                <p>
-                    I love to read blogs & books on how to think and reason more effectively, how to be a better (software) engineer, to understand
-                    people and how they work, how to be more effective, and how to be a good person. This website is starting to become a collection of resources and ideas around those
-                    topics. If you landed here because you're interested in these things, than I think you'll really like these other blogs.
-                </p>
+                <h3>Latest Articles</h3>
                 <ul>
                     <li>
                         <p>
-                            <a href="https://neilkakkar.com/">Neil Kakkar</a>
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <a href="http://www.paulgraham.com/">Paul Graham</a>
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <a href="https://commoncog.com/blog/">Common Cog</a>
+                            <a href="https://www.harrysprojects.com/articles/objectal.html">Introduction to Active Learning for Object Detection at Vaarst</a>
                         </p>
                     </li>
                 </ul>
                 <h3>Contact Me</h3>
                 <p>
-                    You get in touch with me at <b>henry.j.turner@gmail.com</b>. (No it's not a typo).
+                    You get in touch with me at <b>henry.j.turner@gmail.com</b>.
                     Alternatively, see <a href="https://www.linkedin.com/in/harry-j-turner/">my LinkedIn</a>.
                 </p>
                 <br />
